# repos_labmcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  renovate.json  sonar-project.properties
.gitea/workflows/: ci.yml  release.yml  sonar.yml
src/labmcp/: __init__.py  action1_api.py  auth.py  authorization.py  clients.py  config.py  gitea_api.py  n8n_api.py  pocket_id_api.py  server.py  version.py
tests/: test_action1_api.py  test_auth.py  test_authorization.py  test_clients.py  test_gitea_api.py  test_n8n_api.py  test_pocket_id_api.py  test_server.py
